apps/opa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa
  namespace: opa
  labels:
    app.kubernetes.io/instance: opa
    app.kubernetes.io/name: opa
spec:
  selector:
    matchLabels:
      app: opa
  template:
    metadata:
      labels:
        app: opa
        app.kubernetes.io/instance: opa
        app.kubernetes.io/name: opa
    spec:
      containers:
        - name: opa
          image: openpolicyagent/opa
          ports:
          - containerPort: 8181
            name: http
          args: ["run", "--server", "--log-level", "debug", "--addr", "0.0.0.0:8181"]
