apps/opa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opa
  namespace: opa
  labels:
    app.kubernetes.io/instance: opa
    app.kubernetes.io/name: opa
spec:
  rules:
    - host: opa.apps.prod.devinforyou.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: opa
                port:
                  name: http
